Added the Blueprints and the error handlers

--- a/Lifegiver_test/lifegiver/templates/create_request.html
+++ b/Lifegiver_test/lifegiver/templates/create_request.html
@@ -11,7 +11,7 @@
         <ul>
             <li>
                 <a class="active d-flex align-center fs-14 c-black rad-6 p-10"
-                    href="{{ url_for('hospital_dashboard') }}">
+                    href="{{ url_for('hospitals.hospital_dashboard') }}">
                     <svg xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                         <path
@@ -21,7 +21,7 @@
                 </a>
             </li>
             <li>
-                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('hospital_profile') }}">
+                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('hospitals.hospital_profile') }}">
                     <svg xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                         <path
@@ -31,7 +31,7 @@
                 </a>
             </li>
             <li>
-                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('new_request') }}">
+                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donationrequests.new_request') }}">
                     <svg xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                         <path
@@ -41,7 +41,7 @@
                 </a>
             </li>
             <li>
-                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('new_urgent_request') }}">
+                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('urgentrequests.new_urgent_request') }}">
                     <svg xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                         <path
