--- a/Lifegiver_test/lifegiver/templates/donor_profile.html
+++ b/Lifegiver_test/lifegiver/templates/donor_profile.html
@@ -9,7 +9,7 @@
     <div class="sidebar bg-white p-20 p-relative">
         <ul>
             <li>
-                <a class="active d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donor_dashboard') }}">
+                <a class="active d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donors.donor_dashboard') }}">
                     <svg xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                         <path
@@ -19,7 +19,7 @@
                 </a>
             </li>
             <li>
-                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donor_profile') }}">
+                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donors.donor_profile') }}">
                     <svg xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                         <path
@@ -29,7 +29,7 @@
                 </a>
             </li>
             <li>
-                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('don_requests') }}">
+                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donationrequests.don_requests') }}">
                     <svg xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                         <path
@@ -39,7 +39,7 @@
                 </a>
             </li>
             <li>
-                <a class="d-flex align-center fs-14 c-black rad-6 p-10" hhref="{{ url_for('urgent_requests') }}">
+                <a class="d-flex align-center fs-14 c-black rad-6 p-10" hhref="{{ url_for('urgentrequests.urgent_requests') }}">
                     <svg xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
                         <path
