--- a/Lifegiver_test/lifegiver/templates/hospital_registration.html
+++ b/Lifegiver_test/lifegiver/templates/hospital_registration.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="border-top pt-3">
                     <small class="text-muted">
-                        Already Have An Account? <a class="ml-2" href="{{ url_for('hospital_login') }}">Sign In</a>
+                        Already Have An Account? <a class="ml-2" href="{{ url_for('hospitals.hospital_login') }}">Sign In</a>
                     </small>
                 </div>
             </form>
