--- a/Lifegiver_test/lifegiver/templates/login_user_type.html
+++ b/Lifegiver_test/lifegiver/templates/login_user_type.html
@@ -11,11 +11,11 @@
          <div class="infrBx">
              <div class="input_feild">
                  <label for="Hospital Login">Hospital Login</label>
-                 <a href="{{ url_for('hospital_login') }}">Login</a>
+                 <a href="{{ url_for('hospitals.hospital_login') }}">Login</a>
              </div>
              <div class="input_feild">
                  <label for="Donor Login">Donor Login</label>
-                 <a href="{{ url_for('existing_donor') }}">Login</a>
+                 <a href="{{ url_for('donors.existing_donor') }}">Login</a>
              </div>
          </div>
      </div>
