--- a/Lifegiver_test/lifegiver/templates/donation_history.html
+++ b/Lifegiver_test/lifegiver/templates/donation_history.html
@@ -55,9 +55,9 @@
       {% if page_num %}
         {% if donations.page == page_num %}
           <!-- adding a conditional to show on which page we are currently -->
-          <a id="page" class="btn btn-info mb-4" href="{{ url_for('donation_history', donor_id=donor_id, page=page_num) }}">{{ page_num }}</a>
+          <a id="page" class="btn btn-info mb-4" href="{{ url_for('donors.donation_history', donor_id=donor_id, page=page_num) }}">{{ page_num }}</a>
         {% else %}
-          <a id="page" class="btn btn-outline-info mb-4" href="{{ url_for('donation_history', donor_id=donor_id, page=page_num) }}">{{ page_num }}</a>
+          <a id="page" class="btn btn-outline-info mb-4" href="{{ url_for('donors.donation_history', donor_id=donor_id, page=page_num) }}">{{ page_num }}</a>
         {% endif %}
       {% else %}
         <span>. . .</span>
