--- a/Lifegiver_test/lifegiver/templates/existing_donor.html
+++ b/Lifegiver_test/lifegiver/templates/existing_donor.html
@@ -47,12 +47,12 @@
                 <div class="form-group">
                     {{ form.submit(class="btn btn-outline-info") }}
                     <small class="text-muted ml-2">
-                        <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
+                        <a href="{{ url_for('donors.reset_request') }}">Forgot Password?</a>
                     </small>
                 </div>
                 <div class="border-top pt-3">
                     <small class="text-muted">
-                        Need An Account? <a class="ml-2" href="{{ url_for('new_donor') }}">Sign Up Now</a>
+                        Need An Account? <a class="ml-2" href="{{ url_for('donors.new_donor') }}">Sign Up Now</a>
                     </small>
                 </div>
             </form>
