--- a/Lifegiver_test/lifegiver/templates/hospital_dashboard.html
+++ b/Lifegiver_test/lifegiver/templates/hospital_dashboard.html
@@ -8,25 +8,25 @@
     <div class="sidebar bg-white p-20 p-relative">
         <ul>
             <li>
-                <a class="active d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('hospital_dashboard') }}">
+                <a class="active d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('hospitals.hospital_dashboard') }}">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M0 96C0 60.7 28.7 32 64 32H448c35.3 0 64 28.7 64 64V416c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V96zm64 64V416H224V160H64zm384 0H288V416H448V160z"/></svg>
                     <span>Dashboard</span>
                 </a>
             </li>
             <li>
-                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('hospital_profile') }}">
+                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('hospitals.hospital_profile') }}">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"/></svg>
                     <span>Profile</span>
                 </a>
             </li>
             <li>
-                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('new_request') }}">
+                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donationrequests.new_request') }}">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg>
                     <span>New Request</span>
                 </a>
             </li>
             <li>
-                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('new_urgent_request') }}">
+                <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('urgentrequests.new_urgent_request') }}">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24V264c0 13.3-10.7 24-24 24s-24-10.7-24-24V152c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z"/></svg>
                     <span>New Urgent Request</span>
                 </a>
@@ -59,10 +59,10 @@
                 <div class="body txt-c d-flex p-20 mt-20 mb-20 block-mobile">
                     <div>Hospital Name<span class="d-block c-grey fs-14 mt-10">{{ current_user.name }}</span></div>
                     <div>Barcode <span class="d-block c-grey fs-14 mt-10">{{ current_user.barcode }}</span></div>
-                    <div>Total Donation Requests: {{ requests_count }}<span class="d-block c-grey fs-14 mt-10"><a id="buttom" class="mr-2" href="{{ url_for('requests_history', name=current_user.name) }}">Donation History</a></span></div>
-                    <div>Total Urgent Donation Requests: {{ urgent_requests_count }}<span class="d-block c-grey fs-14 mt-10"><a id="buttom" class="mr-2" href="{{ url_for('hospital_urgent_requests', name=current_user.name) }}">Click Here</a></span></div>
+                    <div>Total Donation Requests: {{ requests_count }}<span class="d-block c-grey fs-14 mt-10"><a id="buttom" class="mr-2" href="{{ url_for('hospitals.requests_history', name=current_user.name) }}">Donation History</a></span></div>
+                    <div>Total Urgent Donation Requests: {{ urgent_requests_count }}<span class="d-block c-grey fs-14 mt-10"><a id="buttom" class="mr-2" href="{{ url_for('urgentrequests.hospital_urgent_requests', name=current_user.name) }}">Click Here</a></span></div>
                 </div>
-                <a href="{{ url_for('hospital_profile') }}" class="visit d-block fs-14 bg-blue c-white w-fit btn-shape">Profile</a>
+                <a href="{{ url_for('hospitals.hospital_profile') }}" class="visit d-block fs-14 bg-blue c-white w-fit btn-shape">Profile</a>
             </div>
         </div>
     </div>
