--- a/Lifegiver_test/lifegiver/templates/hospital_login.html
+++ b/Lifegiver_test/lifegiver/templates/hospital_login.html
@@ -49,11 +49,11 @@
                     {{ form.submit(class="btn btn-outline-info") }}
                 </div>
                 <small class="text-muted ml-2">
-                    <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
+                    <a href="{{ url_for('hospitals.reset_request') }}">Forgot Password?</a>
                 </small>
                 <div class="border-top pt-3">
                     <small class="text-muted">
-                        Need An Account? <a class="ml-2" href="{{ url_for('hospital_registration') }}">Sign Up Now</a>
+                        Need An Account? <a class="ml-2" href="{{ url_for('hospitals.hospital_registration') }}">Sign Up Now</a>
                     </small>
                 </div>
             </form>
