--- a/Lifegiver_test/lifegiver/templates/layout.html
+++ b/Lifegiver_test/lifegiver/templates/layout.html
@@ -25,7 +25,7 @@
   <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="{{ url_for('home') }}">Life Giver</a>
+      <a class="navbar-brand" href="{{ url_for('main.home') }}">Life Giver</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <!-- Managing the logout and log in -->
       {% if current_user.is_authenticated %}
@@ -33,22 +33,22 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+                <a class="nav-link" href="{{ url_for('main.home') }}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('donor_dashboard') }}">Dashboard</a>
+                <a class="nav-link" href="{{ url_for('donors.donor_dashboard') }}">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('urgent_requests') }}">Urgent Request</a>
+                <a class="nav-link" href="{{ url_for('urgentrequests.urgent_requests') }}">Urgent Request</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('don_requests') }}">Requests</a>
+                <a class="nav-link" href="{{ url_for('donationrequests.don_requests') }}">Requests</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('about') }}">About</a>
+                <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
               </li>
               <li class="nav-item">
-                <a id="logout" class="btn" href="{{ url_for('logout') }}">log out</a>
+                <a id="logout" class="btn" href="{{ url_for('main.logout') }}">log out</a>
               </li>
             </ul>
           </div>
@@ -56,22 +56,22 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+                <a class="nav-link" href="{{ url_for('main.home') }}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('hospital_dashboard') }}">Dashboard</a>
+                <a class="nav-link" href="{{ url_for('hospitals.hospital_dashboard') }}">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('new_urgent_request') }}">Urgent Request</a>
+                <a class="nav-link" href="{{ url_for('urgentrequests.new_urgent_request') }}">Urgent Request</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('new_request') }}">Requests</a>
+                <a class="nav-link" href="{{ url_for('donationrequests.new_request') }}">Requests</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('about') }}">About</a>
+                <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
               </li>
               <li class="nav-item">
-                <a id="logout" class="btn btn-success" href="{{ url_for('logout') }}">log out</a>
+                <a id="logout" class="btn btn-success" href="{{ url_for('main.logout') }}">log out</a>
               </li>
             </ul>
           </div>
@@ -80,16 +80,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('home') }}">Home</a>
+              <a class="nav-link" href="{{ url_for('main.home') }}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('about') }}">About</a>
+              <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
             </li>
             <li class="nav-item">
-              <a id="login" class="btn" href="{{ url_for('login') }}">login</a>
+              <a id="login" class="btn" href="{{ url_for('main.login') }}">login</a>
             </li>
             <li class="nav-item">
-              <a id="regsiter" class="btn" href="{{ url_for('register') }}">Register</a>
+              <a id="regsiter" class="btn" href="{{ url_for('main.register') }}">Register</a>
             </li>
           </ul>
         </div>
