--- a/Lifegiver_test/lifegiver/templates/new_donor.html
+++ b/Lifegiver_test/lifegiver/templates/new_donor.html
@@ -201,7 +201,7 @@
                 </div>
                 <div class="border-top pt-3">
                     <small class="text-muted">
-                        Already Have An Account? <a class="ml-2" href="{{ url_for('existing_donor') }}">Sign In</a>
+                        Already Have An Account? <a class="ml-2" href="{{ url_for('donors.existing_donor') }}">Sign In</a>
                     </small>
                 </div>
             </form>
