--- a/Lifegiver_test/lifegiver/templates/register_user_type.html
+++ b/Lifegiver_test/lifegiver/templates/register_user_type.html
@@ -11,11 +11,11 @@
          <div class="infrBx">
              <div class="input_feild">
                  <label for="Hospital Login">Hospital Sgin Up</label>
-                 <a href="{{ url_for('hospital_registration') }}">Sgin Up</a>
+                 <a href="{{ url_for('hospitals.hospital_registration') }}">Sgin Up</a>
              </div>
              <div class="input_feild">
                  <label for="Donor Login">Donor Sgin Up</label>
-                 <a href="{{ url_for('new_donor') }}">Sgin Up</a>
+                 <a href="{{ url_for('donors.new_donor') }}">Sgin Up</a>
              </div>
          </div>
      </div>
