--- a/Lifegiver_test/lifegiver/templates/request_by_id.html
+++ b/Lifegiver_test/lifegiver/templates/request_by_id.html
@@ -21,7 +21,7 @@
                 {% if session.get('user_type') == 'hospital' %}
                   {% if request.hospital_request.id == current_user.id  %}
                     <div>
-                      <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('update_don_request', don_request_id=request.id) }}">Update</a>
+                      <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('donationrequests.update_don_request', don_request_id=request.id) }}">Update</a>
                       <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Delete</button>
                     </div>
                   {% endif %}
@@ -52,7 +52,7 @@
           <div>
             {% if current_user.is_authenticated %}
                 {% if session.get('user_type') == 'donor' %}
-                  <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('schedule_donation', don_request_id=request.id) }}">Schedule Donation</a>
+                  <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('userdonations.schedule_donation', don_request_id=request.id) }}">Schedule Donation</a>
                 {% endif %}
             {% else %}
             {% endif %}
@@ -71,7 +71,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <form action="{{ url_for('delete_don_request', don_request_id=request.id) }}" method="POST">
+                <form action="{{ url_for('donationrequests.delete_don_request', don_request_id=request.id) }}" method="POST">
                     <input class="btn btn-danger" type="submit" value="Delete">
                 </form>
                 </div>
