--- a/Lifegiver_test/lifegiver/templates/requests_history.html
+++ b/Lifegiver_test/lifegiver/templates/requests_history.html
@@ -58,9 +58,9 @@
       {% for page_num in requests.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=1) %}
       {% if page_num %}
         {% if requests.page == page_num %} <!--adding a conditional to show on which page we are currently-->
-          <a id="page" class="btn btn-info mb-4" href="{{ url_for('don_requests', page=page_num) }}">{{ page_num }}</a>
+          <a id="page" class="btn btn-info mb-4" href="{{ url_for('donationrequests.don_requests', page=page_num) }}">{{ page_num }}</a>
         {% else %}
-          <a id="page" class="btn btn-outline-info mb-4" href="{{ url_for('don_requests', page=page_num) }}">{{ page_num }}</a>
+          <a id="page" class="btn btn-outline-info mb-4" href="{{ url_for('donationrequests.don_requests', page=page_num) }}">{{ page_num }}</a>
         {% endif %}
       {% else %}
         <span>. . .</span>
