--- a/Lifegiver_test/lifegiver/templates/urgent_request_by_id.html
+++ b/Lifegiver_test/lifegiver/templates/urgent_request_by_id.html
@@ -22,7 +22,7 @@
                 {% if session.get('user_type') == 'hospital' %}
                   {% if request.hospital_urgent_request.id == current_user.id  %}
                     <div>
-                      <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('update_urgent_request', urgent_request_id=request.id) }}">Update</a>
+                      <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('urgentrequests.update_urgent_request', urgent_request_id=request.id) }}">Update</a>
                       <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Delete</button>
                     </div>
                   {% endif %}
@@ -57,8 +57,8 @@
           <div>
             {% if current_user.is_authenticated %}
                 {% if session.get('user_type') == 'donor' %}
-                <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('urgent_donation', don_request_id=request.hospital_urgent_request.id) }}">Donate Now</a>
-                <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('hospital_urgent_requests', name=request.hospital_urgent_request.name) }}">More information about Hospital</a>
+                <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('urgentrequests.urgent_donation', don_request_id=request.hospital_urgent_request.id) }}">Donate Now</a>
+                <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('urgentrequests.hospital_urgent_requests', name=request.hospital_urgent_request.name) }}">More information about Hospital</a>
                 {% endif %}
             {% else %}
             {% endif %}
@@ -77,7 +77,7 @@
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <form action="{{ url_for('delete_urgent_request', urgent_request_id=request.id) }}" method="POST">
+                <form action="{{ url_for('urgentrequests.delete_urgent_request', urgent_request_id=request.id) }}" method="POST">
                     <input class="btn btn-danger" type="submit" value="Delete">
                 </form>
                 </div>
