--- a/Lifegiver_test/lifegiver/templates/urgent_requests.html
+++ b/Lifegiver_test/lifegiver/templates/urgent_requests.html
@@ -10,7 +10,7 @@
   <div class="sidebar bg-white p-20 p-relative">
     <ul>
       <li>
-        <a class="active d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donor_dashboard') }}">
+        <a class="active d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donors.donor_dashboard') }}">
           <svg xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
             <path
@@ -20,7 +20,7 @@
         </a>
       </li>
       <li>
-        <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donor_profile') }}">
+        <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donors.donor_profile') }}">
           <svg xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
             <path
@@ -30,7 +30,7 @@
         </a>
       </li>
       <li>
-        <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('don_requests') }}">
+        <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('donationrequests.don_requests') }}">
           <svg xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
             <path
@@ -40,7 +40,7 @@
         </a>
       </li>
       <li>
-        <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('urgent_requests') }}">
+        <a class="d-flex align-center fs-14 c-black rad-6 p-10" href="{{ url_for('urgentrequests.urgent_requests') }}">
           <svg xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
             <path
@@ -105,9 +105,9 @@
             {% if current_user.is_authenticated %}
             {% if session.get('user_type') == 'donor' %}
             <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1"
-              href="{{ url_for('urgent_donation', don_request_id=request.id) }}">Donate Now</a>
-              <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('hospital_urgent_requests', name=request.hospital_urgent_request.name) }}">More information about Hospital</a>
-              <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('urgent_don_request', urgent_request_id=request.id) }}">Urgent Request By ID</a>
+              href="{{ url_for('urgentrequests.urgent_donation', don_request_id=request.id) }}">Donate Now</a>
+              <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('urgentrequests.hospital_urgent_requests', name=request.hospital_urgent_request.name) }}">More information about Hospital</a>
+              <a id="submit" class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('urgentrequests.urgent_don_request', urgent_request_id=request.id) }}">Urgent Request By ID</a>
               {% endif %}
             {% else %}
             {% endif %}
@@ -119,9 +119,9 @@
         {% for page_num in requests.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=1) %}
         {% if page_num %}
         {% if requests.page == page_num %} <!--adding a conditional to show on which page we are currently-->
-        <a id="page" class="btn btn-info mb-4" href="{{ url_for('urgent_requests', page=page_num) }}">{{ page_num }}</a>
+        <a id="page" class="btn btn-info mb-4" href="{{ url_for('urgentrequests.urgent_requests', page=page_num) }}">{{ page_num }}</a>
         {% else %}
-        <a id="page" class="btn btn-outline-info mb-4" href="{{ url_for('urgent_requests', page=page_num) }}">{{
+        <a id="page" class="btn btn-outline-info mb-4" href="{{ url_for('urgentrequests.urgent_requests', page=page_num) }}">{{
           page_num
           }}</a>
         {% endif %}
