--- a/Lifegiver_test/lifegiver/templates/errors/404.html
+++ b/Lifegiver_test/lifegiver/templates/errors/404.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block link %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/about.css') }}" />
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/404.css') }}" />
 {% endblock link %}
 {% block content %}
 <div class="landing">
@@ -15,6 +15,7 @@
                     The page you are looking for might have been removed had its name changed or is temporarily unavailable
                 </p>
                 <a id="submit" href="{{ url_for('main.home') }}">Return to Home page</a>
+            </div>   
         </div>
     </div>
 </div>
