--- a/Lifegiver_test/lifegiver/templates/errors/500.html
+++ b/Lifegiver_test/lifegiver/templates/errors/500.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block link %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/about.css') }}" />
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/404.css') }}" />
 {% endblock link %}
 {% block content %}
 <div class="landing">
@@ -15,7 +15,8 @@
                     we're experiencing some trouble so plesse try again another time
                 </p>
                 <a id="submit" href="{{ url_for('main.home') }}">Return to Home page</a>
-        </div>
+            </div>
+          </div>
     </div>
 </div>
 {% endblock content %}
