--- a/Lifegiver_test/lifegiver/templates/layout.html
+++ b/Lifegiver_test/lifegiver/templates/layout.html
@@ -62,10 +62,10 @@
                 <a class="nav-link" href="{{ url_for('hospitals.hospital_dashboard') }}">Dashboard</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('urgentrequests.urgent_requests') }}">Urgent Request</a>
+                <a class="nav-link" href="{{ url_for('urgentrequests.new_urgent_request') }}">Urgent Request</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('donationrequests.don_requests') }}">Requests</a>
+                <a class="nav-link" href="{{ url_for('donationrequests.new_request') }}">Requests</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
